--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -59,6 +59,103 @@
 #### couponbl模块(qzx)
 #### hotelbl模块(xzq)
 #### orderbl模块(whc)
+#####需要的服务
+
+| 服务名|服务|
+|:-----:|:----:|
+|OrderServic.addOrder(OrderVO orderVO)|加入一个新的订单|
+|OrderService.getallorders()|获得所有订单|
+|OrderService.annulOrder(int orderid)|撤销一个订单|
+|OrderService.processOrder(int orderid)|处理订单|
+|OrderService.retrieveOrder(Integer orderId)|获取特定一个订单|
+
+
+<table border="3">
+    <caption>OrderService提供的服务（供接口）</caption>
+    <tr>
+        <th> </th>
+        <th> </th>
+        <th> </th>
+    </tr>
+    <tr>
+        <td rowspan="3"> OrderService.add </td>
+        <td> 语法</td>
+        <td> ResponseVO addOrder(OrderVO orderVO);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 此ordervo信息不存在</td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 在数据库中增加一个o记录</td>
+    </tr>
+    <tr>
+        <td rowspan="3"> OrderService.getallorders </td>
+        <td> 语法</td>
+        <td> List getAllOrders();</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 无</td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 按List返回所有订单信息</td>
+    </tr>    
+    <tr>
+        <td rowspan="3"> OrderService.getUserOrders </td>
+        <td> 语法</td>
+        <td> List<Order> getUserOrders(int userid);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 指定用户userid存在 </td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 返回该user的订单信息</td>
+    </tr>
+    <tr>
+        <td rowspan="3"> OrderService.annul </td>
+        <td> 语法</td>
+        <td> ResponseVO annulOrder(int orderid);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 此orderid存在 </td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 删除此orderid的订单信息</td>
+    </tr>    
+    <tr>
+        <td rowspan="3"> OrderService.processOrder </td>
+        <td> 语法</td>
+        <td> ResponseVO processOrder(int orderid);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 此orderid在数据库中存在 </td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 执行订单</td>
+    </tr>
+    <tr>
+        <td rowspan="3"> Order.show </td>
+        <td> 语法</td>
+        <td> Order retrieveOrder(Integer orderId);</td>
+    </tr>
+    <tr>
+        <td> 前置条件</td>
+        <td> 此orderid在数据库中存在 </td>
+    </tr>
+    <tr>
+        <td>后置条件 </td>
+        <td> 以Order形式获取该特定订单的全部信息</td>
+    </tr>                           
+</table>
 #### userbl模块（hwh）
 
 
