doc: adminbl and userbl

--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -40,9 +40,9 @@
 
 ### 1.2 词汇表
 
-| 词汇名称 | 词汇含义 | 备注 |
-| :-: | :-: | :-: |
-|NJUSE-HMS| NJUSE酒店管理系统 | 无 |
+| 词汇名称 | 词汇含义      | 备注                 |
+| :------: | --------- | :----: |
+|  NJUSE-HMS  | NJUSE酒店管理系统 | 无 |
 
 ### 1.3 参考资料
 《软件工程与计算（卷二）》
@@ -53,13 +53,539 @@
 ## 3.系统结构设计描述
 参考NJUSE酒店管理系统体系结构描述文档中对体系结构设计的描述。
 
-## 4.结构视角（本周日ddl，除动态模型和设计原理的图之外）
+## 4.结构视角
 ### 4.1 业务逻辑层的分解
-#### adminbl模块(hwh)
+业务逻辑层地开发包图如下图：
+![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%89%8D%E7%AB%AF.png)
+
+#### adminbl模块
+（1）模块描述
+
+    adminbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
+    adminbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
+
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.admin.AdminController接口，controller.admin.AdminController接口通过调用
+bl.admin.AdminService接口实现。业务逻辑层和数据层之间添加data.admin.AdminMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+adminbl模块的设计如下图所示：
+![adminbl模块设计图]()
+
+adminbl模块各个类的职责如下表所示：
+
+|  模块 |  职责 |
+| :-----: | :-----: |
+|AdminService|接口类，负责提供网站管理员相关操作的接口|
+|AdminServiceImpl|负责实现网站管理员相关操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
+
+（3）模块内部类的接口规范
+AdminServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        AdminServiceImpl.addManager
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+        public ResponseVO addManager(UserForm userForm);
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        已创建一个UserForm对象，并且输入符合输入规则
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        添加一个新的用户对象，并返回用户列表。
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        AdminServiceImpl.getAllManagers
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public List&lt;User&gt; getAllManagers();
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        存在相应的列表数据
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        以列表形式返回所有酒店管理员信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        AdminServiceImpl.moveUser
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public ResponseVO moveUser(int userId);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的用户ID</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>删除用户ID对应的用户信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>AdminServiceImpl.changeHotelManager</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public ResponseVO changeHotelManager(Integer hotelId, Integer managerId);</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的酒店ID和酒店管理员ID</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>指定参数中的酒店管理员ID为酒店ID对应酒店的管理员ID</p>
+      </td>
+    </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.userForm</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>用户信息表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AdminMapper.addManager(User user)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AdminMapper.getAllManagers()</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>以列表形式获取所有身份类型为HotelManager的用户单一持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> AdminMapper.moveUser(int userId)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据用户ID删除一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AdminMapper.changeHotelManager(int hotelId,Integer managerId)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         指定managerId为hotelId对应酒店对象的管理员ID属性值
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当网站管理员填写好需要添加的用户表单时，网站管理员业务逻辑处理的相关对象之间的协作。
+
+![addManager动态模型]()
+
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
+
 #### couponbl模块(qzx)
 #### hotelbl模块(xzq)
 #### orderbl模块(whc)
-#### userbl模块（hwh）
+
+#### userbl模块
+（1）模块描述
+
+    userbl模块承担的需求参见需求规格说明文档功能需求及相关非功能需求。
+    userbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
+
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.user.AccountController接口，controller.user.AccountController接口通过调用
+bl.user.AccountService接口和bl.user.EvaluationService接口实现。业务逻辑层和数据层之间添加data.user.AccountMapper接口和data.user.EvaluationMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+userbl模块的设计如下图所示：
+![userbl模块设计图]()
+
+userbl模块各个类的职责如下表所示：
+
+|  模块 |  职责 |
+| :-----: | :-----: |
+|AccountService|接口类，负责提供普通用户（客户）相关操作的接口|
+|AdminServiceImpl|负责实现普通用户（客户）相关操作|
+|EvaluationService|接口类，负责提供与酒店评价相关操作的接口|
+|EvaluationServiceImpl|负责实现用户评价酒店和获取酒店评价信息的操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
+|Evaluation|酒店评价的领域模型对象，拥有评价信息，可以用于提供进行评价及获取评价的服务|
+
+（3）模块内部类的接口规范
+AccountServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        AccountServiceImpl.registerAccount
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+         public ResponseVO registerAccount(UserVO userVO);
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        已创建一个UserVO对象，并且输入符合输入规则
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        注册一个新的用户对象。
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        AccountServiceImpl.login
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public User login(UserForm userForm);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        存在相应的用户信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        以该用户的身份登录系统
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        AccountServiceImpl.getUserInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public User getUserInfo(int id);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的用户ID</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>返回用户ID对应的用户信息</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>AccountServiceImpl.updateUserInfo</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> public ResponseVO updateUserInfo(int id, String password, String username, String phonenumber) ;</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的用户ID</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>修改用户ID对应的用户信息中的密码、用户名、电话号码为相应信息</p>
+      </td>
+    </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.userForm</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>用户信息表单类</p>
+       </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.User</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>用户实体类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AccountMapper.createNewAccount(User user)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AccountMapper.getAccountByName(String email)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>根据用户邮箱返回一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> AccountMapper.getAccountById(int id)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据用户ID返回一个用户持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>AccountMapper.updateAccount(int id, String password,String username,String phonenumber);
+</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         修改ID对应的用户密码、用户名、电话号码为参数中的相应值
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+EvaluationServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        EvaluationServiceImpl.retrieveHotelEvaluations
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+         public List &lt;Evaluation&gt; retrieveHotelEvaluations(Integer hotelId);
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        存在相应的酒店ID
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        返回酒店ID对应的所有评价信息
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        EvaluationServiceImpl.insertEvaluationInfo
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+        public void insertEvaluationInfo(Evaluation evaluation);
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        输入一个评价对象信息，并且输入符合输入规则
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        添加一条评价信息
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>EvaluationMapper.insertEvaluation(Evaluation evaluation)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个评价持久化对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>EvaluationMapper.selectEvaByHotelId(Integer hotelId)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>根据酒店ID返回其相应的评价信息</p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的评价表单时，评价业务逻辑处理的相关对象之间的协作。
+
+![insertEvaluationInfo动态模型]()
+
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
 
 
 ## 5.依赖视角
