--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -279,17 +279,29 @@ AdminServiceImpl的接口规范如下表所示：
 #### hotelbl模块(xzq)
 #### orderbl模块(whc)
 
-##### 需要的服务
+（1）模块描述
+
+    orderbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
+    orderbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
+
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.order.OrderController接口，controller.order.OrderController接口通过调用
+bl.order.OrderService接口实现。业务逻辑层和数据层之间添加data.order.OrderMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+orderbl模块的设计如下图所示：
+![orderbl模块设计图]()
 
 | 服务名|服务|
 |:-----:|:----:|
-|OrderServic.addOrder(OrderVO orderVO)|加入一个新的订单|
-|OrderService.getallorders()|获得所有订单|
-|OrderService.annulOrder(int orderid)|撤销一个订单|
-|OrderService.processOrder(int orderid)|处理订单|
-|OrderService.retrieveOrder(Integer orderId)|获取特定一个订单|
+|OrderService|接口类，负责提供订单相关操作的接口|
+|OrderServiceImpl|负责实现订单相关操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
 
-
+（3）模块内部类的接口规范
+OrderServiceImpl的接口规范如下表所示：
 <table border="3">
     <caption>OrderService提供的服务（供接口）</caption>
     <tr>
@@ -298,7 +310,7 @@ AdminServiceImpl的接口规范如下表所示：
         <th> </th>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.add </td>
+        <td rowspan="3"> OrderServiceImpl.add </td>
         <td> 语法</td>
         <td> ResponseVO addOrder(OrderVO orderVO);</td>
     </tr>
@@ -311,7 +323,7 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 在数据库中增加一个o记录</td>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.getallorders </td>
+        <td rowspan="3"> OrderServiceImpl.getallorders </td>
         <td> 语法</td>
         <td> List getAllOrders();</td>
     </tr>
@@ -324,7 +336,7 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 按List返回所有订单信息</td>
     </tr>    
     <tr>
-        <td rowspan="3"> OrderService.getUserOrders </td>
+        <td rowspan="3"> OrderServiceImpl.getUserOrders </td>
         <td> 语法</td>
         <td> List&lt;Order&gt; getUserOrders(int userid);</td>
     </tr>
@@ -337,7 +349,7 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 返回该user的订单信息</td>
     </tr>
     <tr>
-        <td rowspan="3"> OrderService.annul </td>
+        <td rowspan="3"> OrderServiceImpl.annul </td>
         <td> 语法</td>
         <td> ResponseVO annulOrder(int orderid);</td>
     </tr>
@@ -350,7 +362,7 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 删除此orderid的订单信息</td>
     </tr>    
     <tr>
-        <td rowspan="3"> OrderService.processOrder </td>
+        <td rowspan="3"> OrderServiceImpl.processOrder </td>
         <td> 语法</td>
         <td> ResponseVO processOrder(int orderid);</td>
     </tr>
@@ -363,7 +375,7 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 执行订单</td>
     </tr>
     <tr>
-        <td rowspan="3"> Order.show </td>
+        <td rowspan="3"> OrderServiceImpl.retrieveOrder </td>
         <td> 语法</td>
         <td> Order retrieveOrder(Integer orderId);</td>
     </tr>
@@ -376,6 +388,28 @@ AdminServiceImpl的接口规范如下表所示：
         <td> 以Order形式获取该特定订单的全部信息</td>
     </tr>                           
 </table>
+
+需要的服务（虚接口）
+|  服务名 |  服务 |
+| :-----: | :-----: |
+|vo.ResponseVO|检查调用是否成功|
+|vo.OrderVO|订单类|
+|OrderMapper.addOrder(OrderVO orderVO) |新增一个订单持久化对象|
+|OrderMapper.getAllOrders()|以列表形式获取所有订单单一持久化对象|
+|OrderMapper.annulOrder(int orderid)|根据订单号删除一个订单持久化对象|
+|OrderMapper.processOrder(int orderid)|根据订单号处理一个订单持久化对象|
+|OrderMapper.getOrderById(int orderid)|根据订单号获取一个订单持久化对象|
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的订单表单时，用户业务逻辑处理的相关对象之间的协作。
+
+![addOrder动态模型]()
+
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
 
 #### userbl模块
 （1）模块描述
