--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -58,7 +58,7 @@
 业务逻辑层地开发包图如下图：
 ![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%89%8D%E7%AB%AF.png)
 
-#### adminbl模块
+#### 4.1.1 adminbl模块
 （1）模块描述
 
     adminbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
@@ -120,6 +120,33 @@ AdminServiceImpl的接口规范如下表所示：
       </td>
     </tr>
     <tr>
+          <td rowspan="3" colspan="1" style="text-align: center;">
+            AdminServiceImpl.addMarketer
+          </td>
+          <td style="text-align: center;">
+            语法
+          </td>
+          <td style="text-align: center;">
+            public ResponseVO addMarketer(UserForm userForm);
+          </td>
+        </tr>
+        <tr>
+          <td style="text-align: center;">
+            前置条件
+          </td>
+          <td style="text-align: center;">
+            已创建一个UserForm对象，并且输入符合输入规则
+          </td>
+        </tr>
+        <tr>
+          <td style="text-align: center;">
+            后置条件
+          </td>
+          <td style="text-align: center;">
+            添加一个新的用户对象，并返回网站营销人员列表。
+          </td>
+        </tr>
+    <tr>
       <td rowspan="3" colspan="1" style="text-align: center;">
         AdminServiceImpl.getAllManagers
       </td>
@@ -146,6 +173,33 @@ AdminServiceImpl的接口规范如下表所示：
         以列表形式返回所有酒店管理员信息
       </td>
     </tr>
+     <tr>
+          <td rowspan="3" colspan="1" style="text-align: center;">
+            AdminServiceImpl.getAllMarketers
+          </td>
+          <td colspan="1" style="text-align: center;">
+            语法
+          </td>
+          <td colspan="1" style="text-align: center;">
+            public List&lt;User&gt; getAllMarketers();
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            前置条件
+          </td>
+          <td colspan="1" style="text-align: center;">
+            存在相应的列表数据
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            后置条件
+          </td>
+          <td colspan="1" style="text-align: center;">
+            以列表形式返回所有网站营销人员信息
+          </td>
+        </tr>
     <tr>
       <td colspan="1" rowspan="3" style="text-align: center;">
         AdminServiceImpl.moveUser
@@ -266,18 +320,27 @@ AdminServiceImpl的接口规范如下表所示：
 
 (4)业务逻辑层的动态模型
 
-下图表明了NJUSE酒店管理系统中，当网站管理员填写好需要添加的用户表单时，网站管理员业务逻辑处理的相关对象之间的协作。
+下图表明了NJUSE酒店管理系统中，当网站管理员填写好需要添加的用户表单时，网站管理员业务逻辑处理的相关对象之间的协作。（添加网站营销人员与添加酒店管理人员顺序相同，图略）
 
-![addManager动态模型]()
+![addManager动态模型](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B7%BB%E5%8A%A0%E7%AE%A1%E7%90%86%E5%91%98.png)
+
+下图表明了NJUSE酒店管理系统中，当网站管理员填需要获取用户信息时，网站管理员业务逻辑处理的相关对象之间的协作。（获取网站营销人员信息与获取酒店管理人员信息顺序相同，图略）
+![getAllManagers](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98.png)
+
+下图表明了NJUSE酒店管理系统中，当网站管理员填需要删除用户信息时，网站管理员业务逻辑处理的相关对象之间的协作。
+![moveUser](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%88%A0%E9%99%A4%E7%94%A8%E6%88%B7.png)
+
+下图表明了NJUSE酒店管理系统中，当网站管理员修改酒店指定的管理员时，网站管理员业务逻辑处理的相关对象之间的协作。
+![changeHotelManager](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%94%B9%E5%8F%98%E9%85%92%E5%BA%97%E7%AE%A1%E7%90%86%E5%91%98.png)
 
 
 (5)业务逻辑层的设计原理
 
 利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
 
-#### couponbl模块(qzx)
-#### hotelbl模块(xzq)
-#### orderbl模块(whc)
+#### 4.1.2 couponbl模块(qzx)
+#### 4.1.3 hotelbl模块(xzq)
+#### 4.1.4 orderbl模块(whc)
 
 ##### 需要的服务
 
@@ -377,7 +440,7 @@ AdminServiceImpl的接口规范如下表所示：
     </tr>                           
 </table>
 
-#### userbl模块
+#### 4.1.5 userbl模块
 （1）模块描述
 
     userbl模块承担的需求参见需求规格说明文档功能需求及相关非功能需求。
@@ -523,6 +586,222 @@ AccountServiceImpl的接口规范如下表所示：
       </td>
     </tr> 
     <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            <p>AccountServiceImpl.updateUserVip</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p> public ResponseVO updateUserVip(int id, int vip, Date birthday);</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的用户ID,输入的日期符合输入规则</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>修改用户ID对应的用户信息中的会员信息</p>
+          </td>
+        </tr>
+        <tr>
+                  <td colspan="1" rowspan="3" style="text-align: center;">
+                    <p>AccountServiceImpl.updateUserVip</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>语法</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p> public ResponseVO updateUserVip(int id, int vip, Date birthday);</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>前置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>数据库中存在对应的用户ID,输入的日期符合输入规则</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>后置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>修改用户ID对应的用户信息中的会员信息</p>
+                  </td>
+                </tr> 
+        <tr>
+                  <td colspan="1" rowspan="3" style="text-align: center;">
+                    <p>AccountServiceImpl.getAllClients</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>语法</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p> public List&lt;User&gt; getAllClients();</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>前置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>无</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>后置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>列表形式返回所有用户类型为客户的用户信息</p>
+                  </td>
+                </tr>  
+    <tr>
+                      <td colspan="1" rowspan="3" style="text-align: center;">
+                        <p>AccountServiceImpl.getAllClients</p>
+                      </td>
+                      <td colspan="1" style="text-align: center;">
+                        <p>语法</p>
+                      </td>
+                      <td colspan="1" style="text-align: center;">
+                        <p> public List&lt;User&gt; getAllClients();</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td colspan="1" style="text-align: center;">
+                        <p>前置条件</p>
+                      </td>
+                      <td colspan="1" style="text-align: center;">
+                        <p>无</p>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td colspan="1" style="text-align: center;">
+                        <p>后置条件</p>
+                      </td>
+                      <td colspan="1" style="text-align: center;">
+                        <p>列表形式返回所有用户类型为客户的用户信息</p>
+                      </td>
+                    </tr>  
+                    <tr>
+                                      <td colspan="1" rowspan="3" style="text-align: center;">
+                                        <p>AccountServiceImpl.getAllClients</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>语法</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p> public List&lt;User&gt; getAllClients();</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>前置条件</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>无</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>后置条件</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>列表形式返回所有用户类型为客户的用户信息</p>
+                                      </td>
+                                    </tr>  
+                    <tr>
+                                      <td colspan="1" rowspan="3" style="text-align: center;">
+                                        <p>AccountServiceImpl.addCredit</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>语法</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p> public ResponseVO addCredit(Integer userId,Integer creditAdded);</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>前置条件</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>存在相应的用户ID</p>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>后置条件</p>
+                                      </td>
+                                      <td colspan="1" style="text-align: center;">
+                                        <p>为用户ID对应的用户增加相应的信用值</p>
+                                      </td>
+                                    </tr> 
+              <tr>
+                    <td colspan="1" rowspan="3" style="text-align: center;">
+                        <p>AccountServiceImpl.addCredit</p>
+                    </td>
+                    <td colspan="1" style="text-align: center;">
+                       <p>语法</p>
+                    </td>
+                    <td colspan="1" style="text-align: center;">
+                       <p> public ResponseVO addCredit(Integer userId,Integer creditAdded);</p>
+                    </td>
+              </tr>
+              <tr>
+                  <td colspan="1" style="text-align: center;">
+                      <p>前置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                      <p>存在相应的用户ID</p>
+                  </td>
+              </tr>
+               <tr>
+               <td colspan="1" style="text-align: center;">
+                    <p>后置条件</p>
+               </td>
+               <td colspan="1" style="text-align: center;">
+                   <p>为用户ID对应的用户增加相应的信用值</p>
+               </td>
+               </tr> 
+               <tr>
+                                   <td colspan="1" rowspan="3" style="text-align: center;">
+                                       <p>AccountServiceImpl.moveMember</p>
+                                   </td>
+                                   <td colspan="1" style="text-align: center;">
+                                      <p>语法</p>
+                                   </td>
+                                   <td colspan="1" style="text-align: center;">
+                                      <p> public ResponseVO moveMember(Integer userId);</p>
+                                   </td>
+                             </tr>
+                             <tr>
+                                 <td colspan="1" style="text-align: center;">
+                                     <p>前置条件</p>
+                                 </td>
+                                 <td colspan="1" style="text-align: center;">
+                                     <p>存在相应的用户ID</p>
+                                 </td>
+                             </tr>
+                              <tr>
+                              <td colspan="1" style="text-align: center;">
+                                   <p>后置条件</p>
+                              </td>
+                              <td colspan="1" style="text-align: center;">
+                                  <p>注销用户ID对应用户的会员信息</p>
+                              </td>
+                              </tr>     
+    <tr>
       <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
         <p><strong>需要的接口（需接口）</strong></p>
       </td>
@@ -584,8 +863,42 @@ AccountServiceImpl的接口规范如下表所示：
          修改ID对应的用户密码、用户名、电话号码为参数中的相应值
       </td>
     </tr>
+    <tr>
+          <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+            <p>AccountMapper.updateVip(int id, int vip, Date birthday);</p>
+          </td>
+          <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+             注册会员，并修改用户会员信息
+          </td>
+    </tr>
+    <tr>
+          <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+              <p>AccountMapper.getAllClients();</p>
+          </td>
+          <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+              获取所有客户信息
+           </td>
+    </tr>
+    <tr>
+              <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+                  <p>AccountMapper.addCredit(Integer userId, Integer creditAdded);</p>
+              </td>
+              <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+                  为指定用户增加指定信用值
+               </td>
+    </tr>
+    <tr>
+           <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+                 <p>AccountMapper.moveMember(Integer userId);</p>
+           </td>
+           <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+                 为指定用户注销会员身份
+           </td>
+    </tr>
   </tbody>
 </table>
+
+
 
 EvaluationServiceImpl的接口规范如下表所示：
 
@@ -676,9 +989,38 @@ EvaluationServiceImpl的接口规范如下表所示：
 
 (4)业务逻辑层的动态模型
 
+下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的注册账号表单时，账号业务逻辑处理的相关对象之间的协作。
+![registerAccount](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B3%A8%E5%86%8C%E8%B4%A6%E5%8F%B7.png)
+
+下图表明了NJUSE酒店管理系统中，当客户填写好账号邮箱和密码需要登录时，账号业务逻辑处理的相关对象之间的协作。
+![login](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E7%99%BB%E5%BD%95.png)
+
+下图表明了NJUSE酒店管理系统中，当用户需要获取自己的账号信息时，账号业务逻辑处理的相关对象之间的协作。
+![getUserInfo](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF.png)
+
+下图表明了NJUSE酒店管理系统中，当客户填写好需要修改的用户信息表单并提交修改时，账号业务逻辑处理的相关对象之间的协作。
+![updateUserInfo](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%9B%B4%E6%94%B9%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF.png)
+
+下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的注册会员表单时，账号业务逻辑处理的相关对象之间的协作。
+![updateUserVip](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B3%A8%E5%86%8C%E4%BC%9A%E5%91%98.png)
+
+下图表明了NJUSE酒店管理系统中，当网站管理员和网站营销人员需要获取所有客户信息时，账号业务逻辑处理的相关对象之间的协作。
+![getAllClients](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E5%88%97%E8%A1%A8.png)
+
+下图表明了NJUSE酒店管理系统中，当网站营销人员填写好为客户添加信用值的表单时，账号业务逻辑处理的相关对象之间的协作。
+![addCredit](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%A2%9E%E5%8A%A0%E4%BF%A1%E7%94%A8%E5%80%BC.png)
+
+下图表明了NJUSE酒店管理系统中，当客户选择注销会员身份时，账号业务逻辑处理的相关对象之间的协作。
+![moveMember](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B3%A8%E9%94%80%E4%BC%9A%E5%91%98.png)
+
+
 下图表明了NJUSE酒店管理系统中，当客户填写好需要添加的评价表单时，评价业务逻辑处理的相关对象之间的协作。
 
-![insertEvaluationInfo动态模型]()
+![insertEvaluationInfo动态模型](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%AF%84%E4%BB%B7%E9%85%92%E5%BA%97.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店页面需要显示评价信息时，评价业务逻辑处理的相关对象之间的协作。
+![retrieveHotelEvaluations](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E9%85%92%E5%BA%97%E8%AF%84%E4%BB%B7.png)
+
 
 
 (5)业务逻辑层的设计原理
